# refget-rs

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  cliff.toml
.cargo/: config.toml
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: BUG-REPORT.yml  FEATURE-REQUEST.yml
.github/workflows/: check.yml  publish.yml
docs/: compliance-testing.md
refget-client/: Cargo.toml
refget-digest/: Cargo.toml
refget-digest/src/: lib.rs
refget-model/: Cargo.toml
refget-model/src/: lib.rs  seqcol.rs  sequence.rs  service_info.rs
refget-rs/: Cargo.toml
refget-rs/src/: lib.rs
refget-server/: Cargo.toml
refget-server-bin/: Cargo.toml
refget-server-bin/src/: main.rs
refget-server/src/: lib.rs  state.rs
refget-server/src/handlers/: mod.rs  seqcol.rs  sequences.rs
refget-store/: Cargo.toml
refget-store/src/: fasta.rs  lib.rs  memory.rs  mmap.rs  seqcol_store.rs
refget-tools/: Cargo.toml
refget-tools/src/: main.rs
scripts/: install-hooks.sh
scripts/hooks/: pre-commit
