[package]
name = "refget-model"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Domain types for GA4GH refget Sequences and Sequence Collections APIs"
documentation = "https://docs.rs/refget-model"

[dependencies]
refget-digest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
