[package]
name = "refget-server-bin"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Standalone GA4GH refget reference server binary"
publish = false

[[bin]]
name = "refget-server"
path = "src/main.rs"

[dependencies]
refget-model = { workspace = true }
refget-server = { workspace = true }
refget-store = { workspace = true }
axum = { workspace = true }
clap = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_yaml = { workspace = true }
tower-http = { workspace = true }
