[package]
name = "refget-server"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Axum-based GA4GH refget Sequences v2.0.0 and Sequence Collections v1.0.0 server"

[dependencies]
refget-model = { workspace = true }
refget-store = { workspace = true }
axum = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
http = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
base64 = { workspace = true }

[dev-dependencies]
refget-digest = { workspace = true }
refget-store = { workspace = true }
tokio = { workspace = true }
http-body-util = "0.1"
md-5 = { workspace = true }
sha2 = { workspace = true }
