[package]
name = "refget-store"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Sequence storage backends for GA4GH refget: in-memory, FASTA, and memory-mapped"
documentation = "https://docs.rs/refget-store"

[dependencies]
refget-digest = { workspace = true }
refget-model = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
noodles-fasta = { workspace = true }
noodles-core = { workspace = true }
md-5 = { workspace = true }
memmap2 = { workspace = true }

[dev-dependencies]
tempfile = "3"
